--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
 }
@@ -17,6 +18,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "TMDB_API_KEY", tmdb_api_key)
+
     }
 
     buildTypes {
@@ -33,14 +36,14 @@ android {
         jvmTarget = '1.8'
     }
 }
-
+def nav_version = "2.3.1"
+def retrofit_version = "2.9.0"
+def moshi_version = "1.11.0"
+def hilt_version = "2.28.3-alpha"
 dependencies {
-    def nav_version = "2.3.1"
-    def retrofit_version = "2.9.0"
-    def moshi_version = "1.11.0"
-    def hilt_version = "2.28.3-alpha"
-
-
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
